# backend

./: .gitignore  AGENTS.md  README.md  models.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
apps/: signals.py
apps/appointments/: apps.py  tasks.py
apps/owners/: models.py
apps/owners/migrations/: 0001_initial.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  wsgi.py
config/settings/: base.py  development.py
